deploy/kubernetes/07-crest-service-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crest-service-headless
spec:
  clusterIP: None
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/name: crest-service
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 8100
      targetPort: http
