deploy/kubernetes/10a-crest-web-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crest-headless
spec:
  clusterIP: None
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/name: crest
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 8100
      targetPort: http
