deploy/kubernetes/12-crest-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crest
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: crest
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 8100
      targetPort: http
